Limiting length of stamp titles to fix 'gap' defect

--- a/app/assets/stylesheets/stamps.css.scss
+++ b/app/assets/stylesheets/stamps.css.scss
@@ -119,7 +119,7 @@
 	height:100%;
 	background-image: url(asset-path('intro-med.jpg'));
 	  background-repeat: no-repeat;
-    background-attachment: fixed;
+    //background-attachment: fixed;
     background-position: 90% 50%; 
     background-size: 100%;
 	height: 650px;
